seldon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mnist-classifier
  annotations:
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: clouddns
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec: 
  rules:
  - host: localhost
    http:
      paths:
        - path: /predict
          pathType: Prefix
          backend:
            service:
              name: tfserving-default
              port:
                number: 8000
  tls:
  - hosts:
    - localhost
    secretName: dns01-tls
